<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e2e2d0"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.tic_tac_toe.MenuActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">



            <TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="30dp"
                android:padding="10dp"
                android:background="@drawable/rectangle"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:text="@string/vs_computer"
                android:onClick="computer"
                android:textAppearance="@style/menu" />


            <TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="30dp"
                android:padding="10dp"
                android:textAlignment="center"
                android:background="@drawable/rectangle"
                android:gravity="center_vertical"
                android:onClick="human"
                android:text="@string/vs_human"
                android:textAppearance="@style/menu" />

            <TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:padding="20px"
                android:background="@drawable/rectangle"
                android:onClick="quit"
                android:text="@string/quit"
                android:textAppearance="@style/menu" />


    </LinearLayout>

</RelativeLayout>