<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e2e2d0"
    android:orientation="vertical"
    tools:context="com.example.android.tic_tac_toe.ComputerFiveActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4D94FF"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="Scores"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:src="@drawable/user" />

            <TextView
                android:id="@+id/hum_board_3_player_two_score"
                style="@style/state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0" />

            <TextView
                android:id="@+id/hum_board_3_player_one_score"
                style="@style/state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:src="@drawable/user_two" />

        </LinearLayout>

        <TextView
            android:id="@+id/msg_hum_board_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:text="@string/playerOne"
            android:textColor="#ffffff"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:background="#4D94FF"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hum_3_0"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play0"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/hum_3_1"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play1"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/hum_3_2"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play2"
                android:text="@string/empty" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hum_3_3"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play3"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/hum_3_4"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play4"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/hum_3_5"
                style="@style/option_two"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play5"
                android:text="@string/empty" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hum_3_6"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play6"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/hum_3_7"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play7"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/hum_3_8"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play8"
                android:text="@string/empty" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:onClick="reset"
        android:padding="8dp"
        android:text="@string/reset"
        android:textAppearance="@style/menu"
        android:textColor="#ffffff" />

</LinearLayout>