<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e2e2d0"
    android:orientation="vertical"
    tools:context="com.example.android.tic_tac_toe.ComputerFiveActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4D94FF"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="Scores"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:src="@drawable/user" />

            <TextView
                android:id="@+id/com_board_5_player_score"
                style="@style/state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0" />

            <TextView
                android:id="@+id/com_board_5_computer_score"
                style="@style/state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:src="@drawable/android" />

        </LinearLayout>

        <TextView
            android:id="@+id/msg_com_board_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:text="Player's Turn"
            android:textColor="#ffffff"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_centerInParent="true"
        android:layout_weight="1"
        android:background="#4D94FF"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/com_5_0"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play0"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/com_5_1"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play1"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/com_5_2"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play2"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/com_5_3"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play3"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/com_5_4"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play4"
                android:text="@string/empty" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/com_5_5"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play5"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/com_5_6"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play6"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/com_5_7"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play7"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/com_5_8"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play8"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/com_5_9"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play9"
                android:text="@string/empty" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/com_5_10"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play10"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/com_5_11"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play11"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/com_5_12"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play12"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/com_5_13"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play13"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/com_5_14"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play14"
                android:text="@string/empty" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/com_5_15"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play15"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/com_5_16"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play16"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/com_5_17"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play17"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/com_5_18"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play18"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/com_5_19"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play19"
                android:text="@string/empty" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/com_5_20"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play20"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/com_5_21"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play21"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/com_5_22"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play22"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/com_5_23"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play23"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/com_5_24"
                style="@style/option_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="play24"
                android:text="@string/empty" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="reset"
            android:padding="8dp"
            android:text="@string/reset"
            android:textAppearance="@style/menu"
            android:textColor="#ffffff" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="changeBoard"
            android:padding="8dp"
            android:text="@string/three"
            android:textAppearance="@style/menu"
            android:textColor="#ffffff" />

    </LinearLayout>

</LinearLayout>